[metadata]
name = tools-data-analysis-btc
version = 0.0.1
author = Alpha
author_email = mailwb3@gmail.com
description = A text util package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/a731062834/tools-data-analysis-btc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.24.0
    jieba>=0.42.1
    setuptools>=42
    data-analysis-tools-fdx>=0.0.1
    data-analysis-tools-jms-diy>=0.0.1
    data-analysis-tools-alpha>=0.0.1
    data-analysis-tools-bet>=0.0.1
    data-analysis-tools-cat>=0.0.1
    data-analysis-tools-dog>=0.0.1
    data-analysis-tools-eth>=0.0.1
    data-analysis-attribute-tool-jms>=0.0.2
    data-analysis-tools-jms-seg>=0.0.2
	data-analysis-tfidf-tool-jms>=0.0.2
	data-analysis-similarity-tool-jms>=0.0.2
	tools-data-analysis-alpha>=0.0.1